fix: x-axis overflow of outlook chart for screen width smaller 340px

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -15,7 +15,6 @@ label {
   width: 100%;
   display: flex;
   flex-direction: column;
-  min-width: 300px;
   margin: 12px auto 8px;
   justify-content: center;
   align-items: center;
